--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Gjallarhorn</title>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="node_modules/materialize-css/dist/css/materialize.css" rel="stylesheet" media="screen,projection">
+    <link href="lib/css/materialize.css" rel="stylesheet" media="screen,projection">
+    <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
@@ -13,8 +13,18 @@
     <a class="waves-effect waves-light btn">button</a>
     <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
     <a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>button</a>
-    <script src="node_modules/jquery/dist/jquery.js"></script>
-    <script src="node_modules/materialize-css/dist/js/materialize.js"></script>
+    <div id="tester" style="width:600px;height:250px;"></div>
+    <script src="lib/jquery.js"></script>
+    <script src="lib/plotly.js"></script>
+    <script src="lib/js/materialize.js"></script>
+    <script>
+        TESTER = document.getElementById('tester');
+	Plotly.plot( TESTER, [{
+	x: [1, 2, 3, 4, 5],
+	y: [1, 2, 4, 8, 16] }], {
+	margin: { t: 0 } } );
+
+    </script>
 </body>
 
 </html>
