--- a/charts.html
+++ b/charts.html
@@ -186,12 +186,12 @@
 4/12/2016 3:28:11 PM > Results:
   [
     {
-      CaseNumber: "TR-2016-1",
-      Style: "Smith v State of Oklahoma"
+      Name: "Celery",
+      Type: "Vegetable"
     },
     {
-      CaseNumber: "TR-2016-2",
-      Style: "Jackson v State of Oklahoma"
+      Name: "Strawberry",
+      Type: "Fruit"
     }
   ]
 4/12/2016 3:29:87 PM > Starting step "FTP - Upload"
