--- a/charts.html
+++ b/charts.html
@@ -92,7 +92,7 @@
           <div class="heading">
             <h1 class="grey-text text-darken-3 left">Gjallarhorn</h1>
             <a class="waves-effect waves btn-flat btn-large disabled right">
-              <span class="grey-text text-darken-3">OSCN\Username</span> <i class="material-icons right">keyboard_arrow_down</i>
+              <span class="grey-text text-darken-3">DEV\Username</span> <i class="material-icons right">keyboard_arrow_down</i>
             </a>
           </div>
         </div>
