--- a/tasks.html
+++ b/tasks.html
@@ -478,7 +478,7 @@ FTP
           <i class="large material-icons">more_vert</i>
         </a>
         <ul>
-          <li><a class="btn-floating deep-purple darken-1 waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="Create"><i class="material-icons">add</i></a></li>
+          <li><a class="btn-floating deep-purple darken-1 waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="Create" href="edittask.html"><i class="material-icons">add</i></a></li>
           <li><a class="btn-floating deep-purple darken-1 waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="Upload"><i class="material-icons">publish</i></a></li>
           <li><a class="btn-floating deep-purple darken-1 waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="Modify"><i class="material-icons">edit</i></a></li>
         </ul>
