Activate material select

--- a/edittask.html
+++ b/edittask.html
@@ -587,7 +587,7 @@
 
     <script>
         $(".button-collapse").sideNav();
-        $('.parallax').parallax();
+        $('select').material_select();
     </script>
 
 </body>
