Fixed feedback/profile overlay issue

--- a/tasks.html
+++ b/tasks.html
@@ -88,7 +88,7 @@
       .feedback {
           width: 400px;
           position: absolute;
-          right: 0;
+          right: -1000px;
           top: 57px;
           z-index: 1000;
          opacity: 0;
@@ -121,7 +121,7 @@
       .profile {
           width: 200px;
           position: absolute;
-          right: 0;
+          right: -1000px;
           top: 57px;
           z-index: 1000;
           opacity: 0;
@@ -163,6 +163,7 @@ box-shadow: 0 1px 0 0 #5e35b1 !important;
 
 .show-opacity {
   opacity: 1;
+  right: 0 !important;
 }
 
 nav {
@@ -270,7 +271,7 @@ nav {
 
 <nav>
     <div class="nav-wrapper black">
-      <a href="dashboard.html" class="brand-logo">Gjallarhorn</a>
+      <a href="index.html" class="brand-logo">Gjallarhorn</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
       <ul class="right hide-on-med-and-down">
