--- a/edittask.html
+++ b/edittask.html
@@ -92,7 +92,7 @@
         .feedback {
             width: 400px;
             position: absolute;
-            right: 0;
+            right: -1000px;
             top: 57px;
             z-index: 1000;
             opacity: 0;
@@ -129,7 +129,7 @@
         .profile {
             width: 200px;
             position: absolute;
-            right: 0;
+            right: -1000px;
             top: 57px;
             z-index: 1000;
             opacity: 0;
@@ -176,6 +176,7 @@
         
         .show-opacity {
             opacity: 1;
+            right: 0 !important;
         }
         
         nav {
@@ -299,7 +300,7 @@
 
     <nav>
         <div class="nav-wrapper black">
-            <a href="dashboard.html" class="brand-logo">Gjallarhorn</a>
+            <a href="index.html" class="brand-logo">Gjallarhorn</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
             <ul class="right hide-on-med-and-down">
