--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       .feedback {
           width: 400px;
           position: absolute;
-          right: 0;
+          right: -1000px;
           top: 57px;
           z-index: 1000;
           opacity: 0;
@@ -120,7 +120,7 @@
       .profile {
           width: 200px;
           position: absolute;
-          right: 0;
+          right: -1000px;
           top: 57px;
           z-index: 1000;
           opacity: 0;
@@ -154,6 +154,7 @@
 }
 .show-opacity {
   opacity: 1;
+  right: 0 !important;
 }
 nav {
     margin: 0 !important;
@@ -245,7 +246,7 @@ nav {
 
 <nav>
     <div class="nav-wrapper black">
-      <a href="dashboard.html" class="brand-logo">Gjallarhorn</a>
+      <a href="index.html" class="brand-logo">Gjallarhorn</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
       <ul class="right hide-on-med-and-down">
