Fixed layout issues

--- a/tasks.html
+++ b/tasks.html
@@ -8,6 +8,11 @@
     <link href="lib/css/materialize.css" rel="stylesheet" media="screen,projection">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
+      html {
+        width: 100%;
+        overflow-x: hidden;
+      }
+      
       /* Responsive plots */
       .col2 {
         max-width: 100%;
@@ -303,7 +308,7 @@ nav {
 
     <div class="grey lighten-3" style="padding: 40px 10px 10px 10px; margin-bottom: 50px;">
         <div class="row">
-            <div class="col l8 m12 offset-l2 offset=m0">
+            <div class="col l8 s12 offset-l2">
         <h1 style="font-size: 2.1rem; margin:0; font-weight: 300;">Browse tasks</h1>
         <div class="input-field search-field search-task">
           <input id="search-task" type="search" required placeholder="Add filter">
@@ -327,14 +332,14 @@ FTP
     </div>
 
 <div class="row">
-    <div class="col l8 m12 offset-l2 offset-m0">
+    <div class="col l8 s12 offset-l2">
 
 
 
 
       <div class="row">
 
-        <div class="col m12 l4">
+        <div class="col s12 l4">
           <div class="card grey lighten-3">
             <div class="card-content">
               <span class="card-title">Task 1</span>
@@ -347,7 +352,7 @@ FTP
           </div>
         </div>
 
-        <div class="col m12 l4">
+        <div class="col s12 l4">
           <div class="card grey lighten-3">
             <div class="card-content">
               <span class="card-title">Task 2</span>
@@ -360,7 +365,7 @@ FTP
           </div>
         </div>
 
-        <div class="col m12 l4">
+        <div class="col s12 l4">
           <div class="card grey lighten-3">
             <div class="card-content">
               <span class="card-title">Task 3</span>
@@ -374,7 +379,7 @@ FTP
         </div>
 
 
-        <div class="col m12 l4">
+        <div class="col s12 l4">
           <div class="card grey lighten-3">
             <div class="card-content">
               <span class="card-title">Task 4</span>
@@ -389,7 +394,7 @@ FTP
 
 
 
-        <div class="col m12 l4">
+        <div class="col s12 l4">
           <div class="card grey lighten-3">
             <div class="card-content">
               <span class="card-title">Task 5</span>
@@ -404,7 +409,7 @@ FTP
 
 
 
-        <div class="col m12 l4">
+        <div class="col s12 l4">
           <div class="card grey lighten-3">
             <div class="card-content">
               <span class="card-title">Task 6</span>
@@ -418,7 +423,7 @@ FTP
         </div>
 
 
-        <div class="col m12 l4">
+        <div class="col s12 l4">
           <div class="card grey lighten-3">
             <div class="card-content">
               <span class="card-title">Task 7</span>
@@ -432,7 +437,7 @@ FTP
         </div>
 
 
-        <div class="col m12 l4">
+        <div class="col s12 l4">
           <div class="card grey lighten-3">
             <div class="card-content">
               <span class="card-title">Task 8</span>
@@ -447,7 +452,7 @@ FTP
 
 
 
-        <div class="col m12 l4">
+        <div class="col s12 l4">
           <div class="card grey lighten-3">
             <div class="card-content">
               <span class="card-title">Task 9</span>
@@ -499,7 +504,7 @@ FTP
 
     <div class="grey lighten-3" style="padding: 40px 10px 10px 10px;">
         <div class="row">
-            <div class="col l8 m12 offset-l2 offset-m0 center-align ">
+            <div class="col l8 s12 offset-l2 center-align ">
 
         <ul class="pagination">
   <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
