More layout fixes

--- a/tasks.html
+++ b/tasks.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gjallarhorn</title>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="lib/css/materialize.css" rel="stylesheet" media="screen,projection">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
