--- a/edittask.html
+++ b/edittask.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gjallarhorn</title>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="lib/css/materialize.css" rel="stylesheet" media="screen,projection">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
@@ -92,7 +92,7 @@
         .feedback {
             width: 400px;
             position: absolute;
-            right: -1000px;
+            right: 10000px;
             top: 57px;
             z-index: 1000;
             opacity: 0;
@@ -129,7 +129,7 @@
         .profile {
             width: 200px;
             position: absolute;
-            right: -1000px;
+            right: 10000px;
             top: 57px;
             z-index: 1000;
             opacity: 0;
@@ -334,10 +334,10 @@
 
     <div class="grey lighten-3" style="padding: 40px 10px 10px 10px; margin-bottom: 50px;">
         <div class="row">
-            <div class="col l8 m12 offset-l2 offset-m0">
+            <div class="col l8 s12 offset-l2">
                 <h1 style="font-size: 2.1rem; margin:0; font-weight: 300;">Edit task</h1>
             </div>
-            <div class="col l2 m12 right-align">
+            <div class="col l2 s12 right-align">
                 <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="Expand All"><i class="material-icons">add</i></a>
                 <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="Collapse All"><i class="material-icons">remove</i></a>
             </div>
@@ -346,9 +346,9 @@
 
     <div class="row">
 
-        <div class="col l8 m12 offset-l2 offset-m0">
+        <div class="col l8 s12 offset-l2">
             <div class="row">
-                <ul class="collapsible col m12 l6 offset-l3" style="padding: 0;" data-collapsible="accordian">
+                <ul class="collapsible col s12 l6 offset-l3" style="padding: 0;" data-collapsible="accordian">
                     <li class="expand">
                         <div class="collapsible-header deep-purple darken-1 white-text">
                             <i class="material-icons">alarm</i>Recurrence
@@ -380,7 +380,7 @@
             </div>
             <div class="row arrow-align"><i class="material-icons medium deep-purple-text text-darken-1">arrow_downward</i></div>
             <div class="row">
-                <ul class="collapsible col m12 l6 offset-l3" style="padding: 0;" data-collapsible="accordian">
+                <ul class="collapsible col s12 l6 offset-l3" style="padding: 0;" data-collapsible="accordian">
                     <li class="expand">
                         <div class="collapsible-header blue darken-1 white-text">
                             <i class="material-icons">subject</i>SQL Connection
@@ -412,7 +412,7 @@
             </div>
             <div class="row arrow-align"><i class="material-icons medium deep-purple-text text-darken-1">arrow_downward</i></div>
             <div class="row">
-                <ul class="collapsible col m12 l6 offset-l3" style="padding: 0;" data-collapsible="accordian">
+                <ul class="collapsible col s12 l6 offset-l3" style="padding: 0;" data-collapsible="accordian">
                     <li class="expand">
                         <div class="collapsible-header amber darken-1 white-text">
                             <i class="material-icons">device_hub</i>Conditional
@@ -447,7 +447,7 @@
                 <i class="material-icons medium red-text text-darken-1 col s3 offset-s2">close</i>
             </div>
             <div class="row">
-                <ul class="collapsible col m12 l6" style="padding: 0;" data-collapsible="accordian">
+                <ul class="collapsible col s12 l6" style="padding: 0;" data-collapsible="accordian">
                     <li class="expand">
                         <div class="collapsible-header teal lighten-1 white-text">
                             <i class="material-icons">sentiment_very_satisfied</i>If Yes
@@ -476,7 +476,7 @@
                         </div>
                     </li>
                 </ul>
-                <ul class="collapsible col m12 l6" style="padding: 0;" data-collapsible="accordian">
+                <ul class="collapsible col s12 l6" style="padding: 0;" data-collapsible="accordian">
                     <li class="expand">
                         <div class="collapsible-header red darken-1 white-text">
                             <i class="material-icons">sentiment_very_dissatisfied</i>If No
@@ -508,7 +508,7 @@
             </div>
             <div class="row arrow-align"><i class="material-icons medium deep-purple-text text-darken-1">arrow_downward</i></div>
             <div class="row">
-                <ul class="collapsible col m12 l6 offset-l3" style="padding: 0;" data-collapsible="accordian">
+                <ul class="collapsible col s12 l6 offset-l3" style="padding: 0;" data-collapsible="accordian">
                     <li class="expand">
                         <div class="collapsible-header pink accent-2 white-text">
                             <i class="material-icons">cloud_upload</i>FTP
