--- a/edittask.html
+++ b/edittask.html
@@ -338,8 +338,8 @@
                 <h1 style="font-size: 2.1rem; margin:0; font-weight: 300;">Edit task</h1>
             </div>
             <div class="col l2 s12 right-align">
-                <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="Expand All"><i class="material-icons">add</i></a>
-                <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="Collapse All"><i class="material-icons">remove</i></a>
+                <a class="btn-flat tooltipped" onclick="$('.expand').addClass('active'); $('.collapsible-header').addClass('active'); $('.collapsible-body').show()" data-position="bottom" data-delay="50" data-tooltip="Expand All"><i class="material-icons">add</i></a>
+                <a class="btn-flat tooltipped" onclick="$('.expand').removeClass('active'); $('.collapsible-header').removeClass('active'); $('.collapsible-body').hide()" data-position="bottom" data-delay="50" data-tooltip="Collapse All"><i class="material-icons">remove</i></a>
             </div>
         </div>
     </div>
@@ -442,24 +442,23 @@
                     </li>
                 </ul>
             </div>
-            <div class="row arrow">
-                <i class="material-icons medium teal-text text-lighten-1 col s3 offset-s3">check</i>
-                <i class="material-icons medium red-text text-darken-1 col s3 offset-s2">close</i>
-            </div>
             <div class="row">
-                <ul class="collapsible col s12 l6" style="padding: 0;" data-collapsible="accordian">
-                    <li class="expand">
-                        <div class="collapsible-header teal lighten-1 white-text">
-                            <i class="material-icons">sentiment_very_satisfied</i>If Yes
-                        </div>
-                        <div class="collapsible-body">
+                <div class="col s12 l6">
+                    <div class="row center-align arrow"><i class="material-icons medium teal-text text-lighten-1">check</i></div>
+                    <div class="row">
+                        <ul class="collapsible col s12 l12" style="padding: 0;" data-collapsible="accordian">
+                            <li class="expand">
+                                <div class="collapsible-header teal lighten-1 white-text">
+                                    <i class="material-icons">sentiment_very_satisfied</i>If Yes
+                                </div>
+                                <div class="collapsible-body">
 
-                            <div class="input-field col s6">
-                                <input id="interval" type="text">
-                                <label for="interval">Interval</label>
-                            </div>
-                            <div class="input-field col s6">
-                                <select>
+                                    <div class="input-field col s6">
+                                        <input id="interval" type="text">
+                                        <label for="interval">Interval</label>
+                                    </div>
+                                    <div class="input-field col s6">
+                                        <select>
                                     <option value="" disabled selected>Choose</option>
                                     <option value="1">Seconds</option>
                                     <option value="2">Minutes</option>
@@ -467,28 +466,33 @@
                                     <option value="4">Days</option>
                                     <option value="5">Months</option>
                                 </select>
-                                <label>Frequency</label>
-                            </div>
-                            <div class="input-field col s12">
-                                <input id="starttime" type="text">
-                                <label for="starttime">Start Time</label>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="collapsible col s12 l6" style="padding: 0;" data-collapsible="accordian">
-                    <li class="expand">
-                        <div class="collapsible-header red darken-1 white-text">
-                            <i class="material-icons">sentiment_very_dissatisfied</i>If No
-                        </div>
-                        <div class="collapsible-body">
+                                        <label>Frequency</label>
+                                    </div>
+                                    <div class="input-field col s12">
+                                        <input id="starttime" type="text">
+                                        <label for="starttime">Start Time</label>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col s12 l6">
+                    <div class="row center-align arrow"><i class="material-icons medium red-text text-darken-1">close</i></div>
+                    <div class="row">
+                        <ul class="collapsible col s12 l12" style="padding: 0;" data-collapsible="accordian">
+                            <li class="expand">
+                                <div class="collapsible-header red darken-1 white-text">
+                                    <i class="material-icons">sentiment_very_dissatisfied</i>If No
+                                </div>
+                                <div class="collapsible-body">
 
-                            <div class="input-field col s6">
-                                <input id="interval" type="text">
-                                <label for="interval">Interval</label>
-                            </div>
-                            <div class="input-field col s6">
-                                <select>
+                                    <div class="input-field col s6">
+                                        <input id="interval" type="text">
+                                        <label for="interval">Interval</label>
+                                    </div>
+                                    <div class="input-field col s6">
+                                        <select>
                                     <option value="" disabled selected>Choose</option>
                                     <option value="1">Seconds</option>
                                     <option value="2">Minutes</option>
@@ -496,15 +500,17 @@
                                     <option value="4">Days</option>
                                     <option value="5">Months</option>
                                 </select>
-                                <label>Frequency</label>
-                            </div>
-                            <div class="input-field col s12">
-                                <input id="starttime" type="text">
-                                <label for="starttime">Start Time</label>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+                                        <label>Frequency</label>
+                                    </div>
+                                    <div class="input-field col s12">
+                                        <input id="starttime" type="text">
+                                        <label for="starttime">Start Time</label>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="row arrow-align"><i class="material-icons medium deep-purple-text text-darken-1">arrow_downward</i></div>
             <div class="row">
